...

    <!--Change family member head -->
    <string name="change_head_member_title">Change family head</string>
    <string name="change_head_member_title_question">Select a new family head</string>
    <string name="change_caregiver_member_title">Change primary caregiver</string>
    <string name="change_caregiver_member_title_question">Select a new primary caregiver</string>
    <string name="phone_number">Phone number</string>
    <string name="other_phone_number">Other phone number</string>
    <string name="save_title">SAVE</string>
    <string name="number_8_16">Number must be 8 to 16 digits</string>
    <string name="status_saving">Saving</string>

    <!--Remove family member -->
    <string name="remove_member_title">Remove member</string>
...
