...
                    <org.smartregister.view.customcontrols.CustomFontTextView
                        android:id="@+id/textview_title"
                        style="@style/CustomFontTextViewStyle.ClientList"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toStartOf="@+id/tvAction"
                        android:layout_toEndOf="@+id/close"
                        android:layout_toRightOf="@+id/close"
                        android:ellipsize="end"
                        android:text="@string/change_head_member_title"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textColor="@android:color/white"
...
