...
    <string name="child_details">Child details %1$s</string>
    <string name="not_given">Not given</string>
    <string name="not_provided">Not provided</string>
    <string name="given">Given</string>
    <string name="provided_on">Provided on %1$s</string>
    <string name="given_on">Given on %1$s</string>
    <string name="search_name_or_id">Search name or ID</string>

    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>

    <string name="action_log_out">Logging Out</string>
    <string name="action_start_sync">Sync Started</string>
...
    <string name="copy_to_clipboard">Copy to clipboard</string>
    <string name="copied_phone_number">PhoneNumber copied to clipboard</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="visit_not_done_btn_child_profile">Visit not done</string>
    <string name="medical_history">Medical History</string>
    <string name="record_home_visit">Record \nHome visit</string>
    <string name="visit_not_done">Visit not \ndone</string>
    <string name="visit_done">Visit done</string>
    <string name="due_visit">Last visit \n %1$s</string>
    <string name="medical_title">Back to %1$s</string>
    <string name="medical_last_visit">%1$s ago</string>
...
