...
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:visibility="visible"
        android:weightSum="2">

        <org.smartregister.view.customcontrols.CustomFontTextView
            android:id="@+id/textview_record_visit"
            style="@style/CustomFontTextViewStyle.ListView.Normal.MultipleLines"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_weight="1"
            android:background="@drawable/record_btn_selector"
...
